Add id for advertisement range

--- a/short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html
+++ b/short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html
@@ -98,7 +98,7 @@
         <div class="author footer-view">
             By Ly Nguyen Nhu * Updated 14 Aug 2020
         </div>
-        <div class="item3">
+        <div class="item3" id="advertisement">
         </div>
     </div>
 </body>
