--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/home.css">
     <script>
         $(function() {
-            $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #p1');
+            $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #content-displayed-in-home');
         });
     </script>
 </head>
