--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/home.css">
     <script>
-        $(function() {
+        function extract_content(paste_range, source_address, source_range) {
+            $(function() {
+                $('#' + paste_range).load(source_address + "#" + source_range);
+            });
+        }
+        /*$(function() {
             $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #content-displayed-in-home');
-        });
+        });*/
+        extract_content('div1','short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html', 'content-displayed-in-home')
     </script>
 </head>
 
