--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         extract_content('div1','short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html', 'content-displayed-in-home')*/
         var fs = require('fs');
         var files = fs.readdirSync('short_review/');
-        $('#div1').load(console.log(files))
+        $('#div1').load(files)
     </script>
 </head> 
 <body>
