--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <script type="text/javascript">
 $(document).ready(function () {
-  $.get("dat/", function(data) {
+  $.get("short_review/", function(data) {
     $("#files").append(data);
   });
 });
