--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
                 $('#' + paste_range).load(source_address + ' #' + source_range);
             });
         }
+        var short_review_list = [
+            '202104008_21-bai-hoc-cho-the-ky-21',
+            '202104007_homo-deus',
+            '202104006_sapiens',
+            '202104005_va_roi_nui_vong',
+            '202104004_ngan-mat-troi-ruc-ro', 
+            '202104003_sao-chung-ta-lai-ngu', 
+            '202104002_nang-tien-ca', 
+            '202104001_ba-toi-da-tu-tu-nho-di'
+        ]
+        var long_review_list = [
+            '202104004_tim-minh-trong-the-gioi-hau-tuoi-tho',
+            '202104003_maye-musk',
+            '202104002_suoi-nguon',
+            '202104001_sapiens'
+        ]
+        for (var i=0; i < short_review_list.length; i++) {
+            extract_content('short_div' + i, 'short_review/' + short_review_list[i] + 'content.html', 'content-displayed-in-home')
+        }
         /*$(function() {
             $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #content-displayed-in-home');
         });
@@ -67,10 +86,10 @@ $(document).ready(function () {
     </nav>
 
     <div class="main-container">
-        <div id="div1">
+        <div id="short_div0">
 
         </div>
-        <div id="files">
+        <div id="short_div1">
 
         </div>
 
