--- a/short_review/202104002_nang-tien-ca/content.html
+++ b/short_review/202104002_nang-tien-ca/content.html
@@ -58,8 +58,8 @@
         <main class="item2">
             <div class="container">
                 <p>
-                    <br> Truyện cổ tích thường kết thúc bằng “Và họ sống bên nhau hạnh phúc mãi mãi về sau”. Có lẽ để hợp với “tiêu chuẩn” này mà Disney đã vẽ ra một kết thúc khác hẳn so với nguyên gốc Nàng Tiên Cá của Andersen. Nhưng cái kết có vẻ đẹp,
-                    dễ chịu, hợp chuẩn cho trẻ em đã khiến cho bộ phim nhạt nhòa hơn hẳn truyện gốc.
+                    <br> <p id="content-displayed-in-home">Truyện cổ tích thường kết thúc bằng “Và họ sống bên nhau hạnh phúc mãi mãi về sau”. Có lẽ để hợp với “tiêu chuẩn” này mà Disney đã vẽ ra một kết thúc khác hẳn so với nguyên gốc Nàng Tiên Cá của Andersen. Nhưng cái kết có vẻ đẹp,
+                    dễ chịu, hợp chuẩn cho trẻ em đã khiến cho bộ phim nhạt nhòa hơn hẳn truyện gốc.</p>
                     <br><br> Andersen – người có tâm hồn quá mức nhạy cảm và có nhiều năm kinh nghiệm yêu đơn phương không chỉ một người – đã miêu tả quá thành công tâm lý của nàng tiên cá. Đó là một cô gái nhỏ, kiệm lời, nội tâm nhưng lại có sức mạnh
                     tinh thần và lòng dũng cảm phi thường. Tha thiết được sống bên người mình yêu và có được linh hồn bất diệt, nàng dám bỏ tất cả gia đình, quê hương, giống nòi, cả tài sản quý giá nhất là giọng hát nữa.
                     <br><br> Nhưng tình yêu đâu đơn giản là yêu hết mình, cứu sống người mình yêu, thầm lặng hi sinh tất cả vì người ấy là sẽ được đáp lại. Cái cao nhất của tình yêu không phải là được yêu lại, được chiếm hữu người mình yêu, mà là được
@@ -71,7 +71,7 @@
         <div class="author footer-view">
             By Ly Nguyen Nhu * Updated 27 Jul 2020
         </div>
-        <div class="item3">
+        <div class="item3" id="advertisment">
         </div>
     </div>
 </body>
