--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             '202104001_sapiens'
         ]
         for (var i=0; i < short_review_list.length; i++) {
-            extract_content('short_div' + i, 'short_review/' + short_review_list[i] + 'content.html', 'content-displayed-in-home')
+            extract_content('short_div' + i, 'short_review/' + short_review_list[i] + '/content.html', 'content-displayed-in-home')
         }
         /*$(function() {
             $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #content-displayed-in-home');
