--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
             '202104003_sao-chung-ta-lai-ngu', 
             '202104002_nang-tien-ca', 
             '202104001_ba-toi-da-tu-tu-nho-di'
-        ]
+        ];
         var long_review_list = [
             '202104004_tim-minh-trong-the-gioi-hau-tuoi-tho',
             '202104003_maye-musk',
             '202104002_suoi-nguon',
             '202104001_sapiens'
-        ]
+        ];
         for (var i=0; i < short_review_list.length; i++) {
-            extract_content('short_div' + i, 'short_review/' + short_review_list[i] + '/content.html', 'content-displayed-in-home')
+            extract_content('short_div' + i, 'short_review/' + short_review_list[i] + '/content.html', 'content-displayed-in-home');
         }
         /*$(function() {
             $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #content-displayed-in-home');
