--- a/short_review.html
+++ b/short_review.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../../styles/short_review.css">
+    <link rel="stylesheet" href="styles/short_review.css">
 </head>
 
 <body>
@@ -21,16 +21,16 @@
     </div>
     <nav class="navbar">
         <div class="nav-item-font nav-item">
-            <a class="nav-item-font" href="../../home.html">Home</a>
+            <a class="nav-item-font" href="home.html">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../short-review.html">Short review</a>
+            <a class="nav-item-font" href="short-review.html">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../long-review.html">Long review</a>
+            <a class="nav-item-font" href="long-review.html">Long review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
-            <a class="nav-item-font" href="../../vlog.html">Vlog</a>
+            <a class="nav-item-font" href="vlog.html">Vlog</a>
         </div>
     </nav>
     <nav class="nav-icon-bar">
@@ -41,63 +41,12 @@
             <a href="https://www.youtube.com/channel/UCNLmhd6dUKsSponBNtSM-Vw" class="fa fa-youtube"></a>
         </div>
     </nav>
-    <div class="main-container">
-        <header class="item1">
-            <div class="header-text">
-                Bà tôi đã từ từ nhỏ đi
-            </div>
-            <div class="author header-view">
-                Michael De Cock và Kristien Aertssen
-            </div>
-            <div class="container">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" style="border: none" src="https://www.youtube.com/embed/Um3WFJkZPWI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </div>
-        </header>
+    <div class="main-container">        
         <main class="item2">
             <div class="container">
-                <p>
-                    <p id="content-displayed-in-home">Dành tặng tất cả những người bà và những cô cháu gái của họ...
-                        <br> Dành tặng bà tôi người đã từ từ nhỏ lại và ra đi mãi mãi...
-                        <br> Mỗi lần đọc lại cuốn sách nhỏ về tình yêu thương này tôi lại nhớ bà day dứt!
-                        <br><br> Truyện như viết về bà tôi, dù bà ở Việt Nam chứ không phải ở Hà Lan, dù bà tên Du chứ không phải Roos, dù ông tham gia chiến đấu chứ không phải làm thuỷ thủ, dù bà đã cô đơn suốt gần 60 năm chứ không chỉ vài mùa.</p>
-                    <br><br>
-                    <figure>
-                        <blockquote class="blockquote">
-                            <p>"Bà đang nghĩ gì...? Tôi tự hỏi"
-                                <br> Khi bà chậm rãi nhả những vòng khói thuốc giữa đêm đông
-                                <br> Khi bà đeo mặt vòng có khắc tên hai người.
-                                <br> Bà đặt mua chiếc vòng ấy khi đã ngoài tám mươi và đã gần nửa thế kỷ từ ngày ông đi xa.</p>
-                        </blockquote>
-                        <figcaption class="blockquote-footer">
-                            Trích đoạn - <cite title="Source Title">Bà tôi đã từ từ nhỏ đi</cite>
-                        </figcaption>
-                    </figure>
-                    <br> Thật không dễ để nói về cái chết, về nỗi đau chia ly. Khi một người thân ra đi, họ mang theo một mảnh tâm hồn của ta nhưng để lại trọn vẹn cho ta tâm hồn của họ. Hãy cho con bạn nghe câu chuyện cảm động về tình yêu và cái chết
-                    này. Đừng e ngại phải đề cập những chuyện đau lòng. Chẳng phải sống và chết là hai mặt của một đồng xu, chẳng phải những nỗi đau khiến tâm hồn chúng ta lớn thêm sao? Hãy kể cho con bạn, vì sao người già ngày càng nhỏ đi: <br><br>
-                    <figure>
-                        <blockquote class="blockquote">
-                            <p>"Bà yêu cuộc sống này làm sao," bà nói.
-                                <br> "Cháu yêu bà làm sao," tôi đáp. "Cháu sẽ nhớ bà lắm."
-                                <br> "Chuyện nhớ nhung thì là khổ đấy," bà nói.
-                                <br> Trái tim tôi rạn nứt như lớp băng trên mặt nước, ở bên ngoài kia lạnh giá
-                                <br> "Vâng. Và nó làm cháu đau. Như thể có một con dao cứa vào tim"
-                                <br> "Nhưng dĩ nhiên là bà không rời xa cháu, Giống như ông luôn ở bên bà, bà sẽ luôn ở bên cháu."
-                                <br> "Bằng cách nào, và ở đâu ạ?" tôi muốn hỏi.
-                                <br> Nhưng bà đã đặt ngón tay bé nhỏ lên môi tôi. "Cháu không biết vì sao người già ngày càng nhỏ đi sao?" ......
-                            </p>
-                        </blockquote>
-                        <figcaption class="blockquote-footer">
-                            Trích đoạn - <cite title="Source Title">Bà tôi đã từ từ nhỏ đi</cite>
-                        </figcaption>
-                    </figure>
-                </p>
+                
             </div>
-        </main>
-        <div class="author footer-view">
-            By Ly Nguyen Nhu * Updated 14 Aug 2020
-        </div>
+        </main>        
         <div class="item3" id="advertisement">
         </div>
     </div>
