--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ $(document).ready(function () {
             <a class="nav-item-font" href="home.html">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="short-review.html">Short review</a>
+            <a class="nav-item-font" href="/short-review.html">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
             <a class="nav-item-font" href="long-review.html">Long review</a>
