--- a/index.html
+++ b/index.html
@@ -67,13 +67,10 @@ $(document).ready(function () {
             <a class="nav-item-font" href="index.html">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="short-review/short-review.html">Short review</a>
+            <a class="nav-item-font" href="short_review/index.html">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="long-review/long-review.html">Long review</a>
-        </div>
-        <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
-            <a class="nav-item-font" href="vlog/vlog.html">Vlog</a>
+            <a class="nav-item-font" href="long_review/index.html">Long review</a>
         </div>
     </nav>
     <nav class="nav-icon-bar">
