--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ $(document).ready(function () {
             <a class="nav-item-font" href="short_review/index.html">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="long_review/index.html">Long review</a>
+            <a class="nav-item-font" href="long_review/index.html" id="nav-item-last">Long review</a>
         </div>
         
     </nav>
