--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ $(document).ready(function () {
         <div class="nav-item-font nav-item nav-item-font">
             <a class="nav-item-font" href="short_review/index.html">Short review</a>
         </div>
-        <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="long_review/index.html" id="nav-item-last">Long review</a>
+        <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
+            <a class="nav-item-font" href="long_review/index.html">Long review</a>
         </div>
         
     </nav>
