--- a/short_review/index.html
+++ b/short_review/index.html
@@ -26,7 +26,7 @@
         <div class="nav-item-font nav-item nav-item-font">
             <a class="nav-item-font" href="index.html">Short review</a>
         </div>
-        <div class="nav-item-font nav-item nav-item-font">
+        <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
             <a class="nav-item-font" href="../long_review/index.html">Long review</a>
         </div>        
     </nav>
