--- a/short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html
+++ b/short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html
@@ -41,7 +41,7 @@
             <a href="https://www.youtube.com/channel/UCNLmhd6dUKsSponBNtSM-Vw" class="fa fa-youtube"></a>
         </div>
     </nav>
-    <div class="main-container">
+    <div class="main-container" id="main-container">
         <header class="item1">
             <div class="header-text">
                 Bà tôi đã từ từ nhỏ đi
