--- a/short_review/index.html
+++ b/short_review/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+w<!DOCTYPE html>
 <html lang="vi">
 
 <head>
@@ -67,7 +67,7 @@
     <div class="main-container">        
         <main class="item2">
             <div class="container">
-                <div id="short_div0"></div>
+                <div id="short_review_content"></div>
                 <div id="short_div1"></div>
             </div>
         </main>        
