--- a/short_review/index.html
+++ b/short_review/index.html
@@ -32,12 +32,10 @@ w<!DOCTYPE html>
         ];
         
         for (var i=0; i < short_review_list.length; i++) {
-            $('#short_review_content').append(extract_content('short_div' + i, short_review_list[i] + '/content.html', 'main-container'));
+            extract_content('short_div' + i, short_review_list[i] + '/content.html', 'main-container');
+            $('#short_review_content').append('#' + 'short_div' + i);
         }
-        /*$(function() {
-            $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #content-displayed-in-home');
-        });
-        extract_content('div1','short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html', 'content-displayed-in-home')*/       
+ 
     </script>
 </head>
 
