--- a/short_review/index.html
+++ b/short_review/index.html
@@ -62,16 +62,10 @@
             <a href="https://www.youtube.com/channel/UCNLmhd6dUKsSponBNtSM-Vw" class="fa fa-youtube"></a>
         </div>
     </nav>
-    <div class="main-container">        
-        <main class="item2">
-            <div class="container">
-                <div id="short_review_content"></div>
-                <div id="short_div7"></div>
-            </div>
-        </main>        
-        <div class="item3" id="advertisement">
-        </div>
-    </div>
+    <main class="container">        
+        <div id="short_review_content"></div>
+        <div id="short_div7"></div>
+    </main>
 </body>
 
 </html>
