--- a/short_review/index.html
+++ b/short_review/index.html
@@ -62,7 +62,7 @@
             <a href="https://www.youtube.com/channel/UCNLmhd6dUKsSponBNtSM-Vw" class="fa fa-youtube"></a>
         </div>
     </nav>
-    <main class="container">        
+    <main>        
         <div id="short_review_content"></div>
         <div id="short_div7"></div>
     </main>
