--- a/short_review/index.html
+++ b/short_review/index.html
@@ -33,7 +33,7 @@
         
         for (var i=0; i < short_review_list.length; i++) {
             extract_content('short_div' + i, short_review_list[i] + '/content.html', 'main-container');
-            $('#short_review_content').append('#' + 'short_div' + i);
+            $('main').append('#' + 'short_div' + i);
         }
  
     </script>
