--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ $(document).ready(function () {
     
 </head> 
 <body>
-    <div class="banner"><img alt="banner" src="images/banner.jpg"></div>
+    <div class="banner"><img alt="banner" src="images/banner.jpeg"></div>
     <div class="slogan">
         Reading With Lily
     </div>
