--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         ];
         for (var i=0; i < short_review_list.length; i++) {
             extract_content('short_div' + i, 'short_review/' + short_review_list[i] + '/content.html', 'content-displayed-in-home');
-            $(#'short_card_image' + i).html(<img src="images/banner.jpeg">);
+            $(#'short_card_image' + i).attr("src",'images/banner.jpeg'>);
         }
         /*$(function() {
             $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #content-displayed-in-home');
@@ -91,7 +91,7 @@ $(document).ready(function () {
         <div id="short-review">
             This is the 1st part
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <div id="short_card_image0">
+            <div><img id="short_card_image0">
             </div>
             <div id="short_div7">
             </div>
