--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         ];
         for (var i=0; i < short_review_list.length; i++) {
             extract_content('short_div' + i, 'short_review/' + short_review_list[i] + '/content.html', 'content-displayed-in-home');
-            /*$(#'short_card_image' + i).attr("src",'images/banner.jpeg'>);*/
+        }
+        for (var i=0; i < short_review_list.length; i++) {
+            $(function() {
+                $(#'short_card_image' + i).attr("src",'images/banner.jpeg'>);
+            });
         }
         /*$(function() {
             $('#div1').load('short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html #content-displayed-in-home');
