--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@ $(document).ready(function () {
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div><img id="short_card_image0">
             </div>
-            <div id="short_div7">
-            </div>
+            
             
             <!--Carousel-->
             <div id="multiple-short-review-carousel" class="carousel slide carousel-multi-item" data-ride="carousel">
@@ -128,7 +127,13 @@ $(document).ready(function () {
 
                             <!--Single item-->
                             <div class="col-md-4">
-                                1 <br><br><br><br><br><br>
+                                <div class="card mb-2">
+                                    <img class="card-img-top" src="short_review/202104001_ba-toi-da-tu-tu-nho-di/images/card.jpg">
+                                    <div class="card-body">
+                                        <p class="card-text" id="short_div7"></p>
+                                        <a class="btn btn-primary" href="#">Button</a>
+                                    </div>
+                                </div>
                             </div>
 
                             <!--Single item-->
