--- a/short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html
+++ b/short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html
@@ -58,10 +58,13 @@
         <main class="item2">
             <div class="container">
                 <p>
-                    <p id="content-displayed-in-home">Dành tặng tất cả những người bà và những cô cháu gái của họ...
+                    <div id="content-displayed-in-home">Dành tặng tất cả những người bà và những cô cháu gái của họ...
                         <br> Dành tặng bà tôi người đã từ từ nhỏ lại và ra đi mãi mãi...
                         <br> Mỗi lần đọc lại cuốn sách nhỏ về tình yêu thương này tôi lại nhớ bà day dứt!
-                        <br><br> Truyện như viết về bà tôi, dù bà ở Việt Nam chứ không phải ở Hà Lan, dù bà tên Du chứ không phải Roos, dù ông tham gia chiến đấu chứ không phải làm thuỷ thủ, dù bà đã cô đơn suốt gần 60 năm chứ không chỉ vài mùa.</p>
+                    </div>
+                
+                    <div>
+                        <br><br> Truyện như viết về bà tôi, dù bà ở Việt Nam chứ không phải ở Hà Lan, dù bà tên Du chứ không phải Roos, dù ông tham gia chiến đấu chứ không phải làm thuỷ thủ, dù bà đã cô đơn suốt gần 60 năm chứ không chỉ vài mùa.
                     <br><br>
                     <figure>
                         <blockquote class="blockquote">
@@ -92,6 +95,7 @@
                             Trích đoạn - <cite title="Source Title">Bà tôi đã từ từ nhỏ đi</cite>
                         </figcaption>
                     </figure>
+                    </div>
                 </p>
             </div>
         </main>
