--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
             });
         };
         function get_image(des_img, source_address) {
-            $(function() {
-                $('#' + des_img).attr("href", source_address);
-            });
+            document.getElementById(des_img).src = source_address;
         };
         var short_review_list = [
             '202104008_21-bai-hoc-cho-the-ky-21',
