--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         ];
         for (var i=0; i < short_review_list.length; i++) {
             extract_content('short_div' + i, 'short_review/' + short_review_list[i] + '/content.html', 'content-displayed-in-home');
-            get_image('short_card_image' + i, 'short_review/' + short_review_list[i] + 'images/card.jpg');
+            /*get_image('short_card_image' + i, 'short_review/' + short_review_list[i] + 'images/card.jpg');*/
         };
-        
+        get_image('short_card_image7',  short_review/202104001_ba-toi-da-tu-tu-nho-di/images/card.jpg);
         /*var url = 'https://avatarfiles.alphacoders.com/822/82242.png';
  
 $(document).ready(function() {
