--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             });
         };
         function get_image(des_img, source_address) {
-            document.getElementById(des_img).src = source_address;
+            var img = new Image();
+            img.src = source_address;
+            $(function() {
+                $('#' + des_img).load(img);
+            });            
         };
         var short_review_list = [
             '202104008_21-bai-hoc-cho-the-ky-21',
