--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         ];
         for (var i=0; i < short_review_list.length; i++) {
             /*extract_content('short_div' + i, 'short_review/' + short_review_list[i] + '/content.html', 'content-displayed-in-home');*/
-            get_image('short_card_image' + i,  'short_review/' + short_review_list[i] + '/images/card.jpg');*/
+            get_image('short_card_image' + i,  'short_review/' + short_review_list[i] + '/images/card.jpg');            
         };
                 /*for (var j=0; j < short_review_list.length; j++) {
 
