--- a/index.html
+++ b/index.html
@@ -87,12 +87,10 @@
             extract_content('short_div' + i, 'short_review/' + short_review_list[i] + '/content.html', 'content-displayed-in-home');
                        
         };
-                /*for (var j=0; j < short_review_list.length; j++) {
+                for (var j=6; j < short_review_list.length; j++) {
 
             get_image('short_card_image' + j,  'short_review/' + short_review_list[j] + '/images/card.jpg');
-        };*/
-                get_image('short_card_image' + 7,  'short_review/' + short_review_list[7] + '/images/card.jpg');
-
+        };
 
                         
             </script>
