--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <div id="short-review">
             This is the 1st part
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <div><img id="short_card_image6" src="">
+              
+            </div>
             <div><img id="short_card_image7" src="">
               
             </div>
