--- a/short_review/202104004_ngan-mat-troi-ruc-ro/content.html
+++ b/short_review/202104004_ngan-mat-troi-ruc-ro/content.html
@@ -77,7 +77,7 @@
         <main class="item2">
             <div class="container">
                 <p>
-                    <br> "Ngàn mặt trời rực rỡ" không khiến mình rơi lệ. Câu chuyện cuộc đời của Mariam và Laila - hai người phụ nữ Afghanistan khiến mình choáng váng, chết lặng, không thở nổi.
+                    <br> <p id="content-displayed-in-home">"Ngàn mặt trời rực rỡ" không khiến mình rơi lệ. Câu chuyện cuộc đời của Mariam và Laila - hai người phụ nữ Afghanistan khiến mình choáng váng, chết lặng, không thở nổi.</p>
                     <br><br> Ảnh trên là trích đoạn một số điều luật Taliban đã áp dụng ở Afganishtan từ khi họ nắm chính quyền năm 1996. Điều luật nào khiến bạn thấy kinh sợ? "Không được sơn móng tay. Nếu không sẽ bị chặt ngón tay"?
                     <br><br> Trong tất cả các điều luật vô lý phi nhân tính này, điều luật đáng sợ nhất là phụ nữ không được đi làm. Nó đồng nghĩa với việc họ phụ thuộc hoàn toàn vào người đàn ông. Địa ngục trần gian có biến mất khi người đàn ông đó chết
                     đi? Không. Bạn sẽ phải cho đi những đứa con, trở thành tài sản của một người đàn ông khác hoặc đơn giản là chết đói vì bạn không được đi làm.
