--- a/short_review/202104007_21-bai-hoc-cho-the-ky-21/content.html
+++ b/short_review/202104007_21-bai-hoc-cho-the-ky-21/content.html
@@ -71,10 +71,10 @@
         <main class="item2">
             <div class="container">
                 <p>
-                    <br> Gần đây bạn có cảm thấy bất an, như có người theo dõi mình vậy?
+                    <br> <p id="content-displayed-in-home">Gần đây bạn có cảm thấy bất an, như có người theo dõi mình vậy?
                     <br> Vừa đặt vé máy bay, đã nhận ngay tin nhắn mời dịch vụ taxi sân bay?
                     <br> Vừa đi đám tang về, thấy FB hiện quảng cáo bàn thờ, quan tài?
-                    <br> Vừa nhắn tin rủ bạn ăn đồ Nhật, bỗng thấy một loạt quán Nhật hiện lên FB?
+                    <br> Vừa nhắn tin rủ bạn ăn đồ Nhật, bỗng thấy một loạt quán Nhật hiện lên FB?</p>
                     <br> Gần đây bạn có cảm thấy bất an, như có người theo dõi mình vậy?
                     <br><br> Chúc mừng bạn vừa bước vào kỉ nguyên tự do nhất của loài người. Không ai theo dõi bạn. Chỉ có Big Data đang theo dõi và phân tích bạn đó thôi. Và sớm thôi, bạn sẽ không còn phải băn khoăn suy nghĩ hôm nay ăn gì, sau này làm
                     nghề gì, cưới người như thế nào. Tất cả đã có Google và Facebook lo.
