--- a/short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html
+++ b/short_review/202104001_ba-toi-da-tu-tu-nho-di/content.html
@@ -21,16 +21,16 @@
     </div>
     <nav class="navbar">
         <div class="nav-item-font nav-item">
-            <a class="nav-item-font" href="../../index.html #">Home</a>
+            <a class="nav-item-font" href="../../index.html/#">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../index.html #short-review">Short review</a>
+            <a class="nav-item-font" href="../../index.html/#short-review">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../index.html #long-review">Long review</a>
+            <a class="nav-item-font" href="../../index.html/#long-review">Long review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
-            <a class="nav-item-font" href="../../index.html #vlog">Vlog</a>
+            <a class="nav-item-font" href="../../index.html/#vlog">Vlog</a>
         </div>
     </nav>
     <nav class="nav-icon-bar">
