--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <!--First slide-->
                     <div class="carousel-item active">
                         <div class="row">
+                            <div class="card-deck">
 
                             <!--Single item-->
                             <div class="col-md-4">
@@ -174,9 +175,10 @@
                                         <a class="btn btn-light" id="short_card_button6" href="#">Đọc tiếp</a>
                                     </div>
                                 </div>
-                            </div>
-                            
+                            </div>                            
                         </div>                        
+                    </div>
+                        
                     </div>
                 </div>
             </div>
