--- a/index.html
+++ b/index.html
@@ -159,24 +159,7 @@
                             </div>
 
                         </div>
-                    </div>
-
-                    <!--Third slide-->
-                    <div class="carousel-item">
-                        <div class="row">
-
-                            <!--Single item-->
-                            <div class="col-md-4">
-                                <div class="card mb-2">
-                                    <img class="card-img-top" id ="short_card_image6" src="">
-                                    <div class="card-body">
-                                        <p class="card-text" id="short_div6"></p>
-                                        <a class="btn btn-light" id="short_card_button6" href="#">Đọc tiếp</a>
-                                    </div>
-                                </div>
-                            </div>                            
-                        </div>                        
-                    </div>                        
+                    </div>                                 
                     
                 </div>
             </div>
@@ -187,7 +170,8 @@
         <script>
                                 
         var short_review_list = [
-            '202104008_21-bai-hoc-cho-the-ky-21',            
+            '202104007_21-bai-hoc-cho-the-ky-21',
+            '202104006_sapiens',
             '202104005_va_roi_nui_vong',
             '202104004_ngan-mat-troi-ruc-ro', 
             '202104003_sao-chung-ta-lai-ngu', 
