--- a/short_review/202104006_sapiens/content.html
+++ b/short_review/202104006_sapiens/content.html
@@ -36,16 +36,16 @@
     </div>
     <nav class="navbar">
         <div class="nav-item-font nav-item">
-            <a class="nav-item-font" href="../../home.html">Home</a>
+            <a class="nav-item-font" href="../../index.html#">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../short-review.html">Short review</a>
+            <a class="nav-item-font" href="../../index.html#short-review">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../long-review.html">Long review</a>
+            <a class="nav-item-font" href="../../index.html#long-review">Long review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
-            <a class="nav-item-font" href="../../vlog.html">Vlog</a>
+            <a class="nav-item-font" href="../../index.html#vlog">Vlog</a>
         </div>
     </nav>
     <nav class="nav-icon-bar">
@@ -71,8 +71,8 @@
         <main class="item2">
             <div class="container">
                 <p>
-                    <br> Lâu lắm rồi mới có 1 cuốn sách khiến mình đọc ngấu nghiến, cầm lên không muốn đặt xuống.
-                    <br><br> Sapiens giống như 1 thước phim về lịch sử loài người từ khi con là những người hang động, rẽ theo nhiều hướng bất ngờ. Người kể chuyện - Harari thì không phải nói, vừa đọc phần vào đề mình đã phải thốt lên "lại 1 gã Do Thái".
+                    <br> <p id="content-displayed-in-home">Lâu lắm rồi mới có 1 cuốn sách khiến mình đọc ngấu nghiến, cầm lên không muốn đặt xuống.
+                    <br><br> Sapiens giống như 1 thước phim về lịch sử loài người từ khi con là những người hang động, rẽ theo nhiều hướng bất ngờ. Người kể chuyện - Harari thì không phải nói, vừa đọc phần vào đề mình đã phải thốt lên "lại 1 gã Do Thái".</p>
                     Thế mà đúng bác ta là 1 gã Do Thái thật, và sinh năm 76 tức là rất trẻ chứ ko già lụ khụ như những gì mình tưởng tượng về 1 giáo sư lịch sử.
                     <br><br> Cậu chuyện về loài người này đầy ắp những kiến thức về vật lý, toán học, kinh tế học, sinh học, tôn giáo...nhưng không hề nhàm chán hay nặng đô. Mớ lý thuyết kinh tế các thầy cô cố nhồi vào đầu mình suốt 4 năm đại học (mà
                     mình vẫn hiểu lơ mơ) thì bác này tóm tắt trong có 1 chương, mà thực ra là vài câu. Thế mới thấy người có chân kiến thì không phải nói năng cầu kỳ phức tạp rối rắm. Bonus thêm là bác này rất hài hước, nhiều ý tưởng quá độc đáo luôn.
