--- a/short_review/202104003_sao-chung-ta-lai-ngu/content.html
+++ b/short_review/202104003_sao-chung-ta-lai-ngu/content.html
@@ -59,7 +59,7 @@
             <div class="container">
                 <p>
                     <br> <p id="content-displayed-in-home">Mỗi ngày chúng ta dành khoảng 8 tiếng để ngủ. Nghĩa là khoảng 25-30 năm cuộc đời chúng ta sẽ diễn ra trong trạng thái “bất tỉnh, mất ý thức và mất phương hướng”. Chính vì vậy, nhiều người đưa ra những lời khuyên nhằm rút ngắn
-                    giấc ngủ hòng kéo dài cuộc đời: “Đời ngắn đừng ngủ dài”, “Đời người có một gang tay, ai hay ngủ ngày còn có nửa gang”.</p>
+                    giấc ngủ hòng kéo dài cuộc đời: “Đời ngắn đừng ngủ dài”</p>, “Đời người có một gang tay, ai hay ngủ ngày còn có nửa gang”.
                     <br><br> Nhưng, liệu mẹ thiên nhiên có tạo ra giấc ngủ nếu nó không đem lại giá trị gì cho quá trình tiến hóa?
                     <br><br> Mathew Walker – tác giả cuốn “Sao chúng ta lại ngủ” là giáo sư khoa thần kinh và tâm lý học tại UC Berkeley, ông là một trong những nhà khoa học có kiến thức uyên bác nhất về “giấc ngủ”. Trong cuốn sách của mình, ông đưa ra
                     rất nhiều kiến thức giúp độc giả hiểu được cơ chế của giấc ngủ, tác dụng của giấc ngủ. Rất nhiều sự thật giật mình về tác hại của việc thiếu ngủ (ngủ dưới 7 tiếng mỗi ngày) được phân tích cụ thể và khoa học. Cuốn “bách khoa toàn thư”
