--- a/short_review/202104005_va_roi_nui_vong/content.html
+++ b/short_review/202104005_va_roi_nui_vong/content.html
@@ -72,7 +72,7 @@
             <div class="container">
                 <p>
                     <br> <p id="content-displayed-in-home">Cuốn tiểu thuyết này không được lòng khán giả như Người đua diều hay Ngàn mặt trời rực rỡ. Nhưng với mình những mảnh đời trong câu chuyện vẫn ám ảnh không nguôi.
-                    <br><br> "Và rồi núi vọng" bước ra khỏi cái bóng của tính đất nước dân tộc, địa phương.</p> Không chỉ có những người dân Afganishtan sống trong sự cai trị hà khắc của Taliban mới khổ, những người ra đi sống mãi trong sự dằn vặt vì quê
+                    <br><br></p> "Và rồi núi vọng" bước ra khỏi cái bóng của tính đất nước dân tộc, địa phương. Không chỉ có những người dân Afganishtan sống trong sự cai trị hà khắc của Taliban mới khổ, những người ra đi sống mãi trong sự dằn vặt vì quê
                     hương, những người vốn đã sinh ra ở đất nước văn minh cũng có những bi kịch của mình. Cũng có thể vì mình có hai bé sinh đôi, câu chuyện của người mẹ kế Parwanah và người chị gái sinh đôi Masooma khiến mình thực sự bị trấn động.
                     <br><br>
                     <figure>
