--- a/long_review/202104001_sapiens/content.html
+++ b/long_review/202104001_sapiens/content.html
@@ -36,16 +36,16 @@
     </div>
     <nav class="navbar">
         <div class="nav-item-font nav-item">
-            <a class="nav-item-font" href="../../home.html">Home</a>
+            <a class="nav-item-font" href="../../index.html#">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../short-review.html">Short review</a>
+            <a class="nav-item-font" href="../../index.html#short-review">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../long-review.html">Long review</a>
+            <a class="nav-item-font" href="../../index.html#long-review">Long review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
-            <a class="nav-item-font" href="../../vlog.html">Vlog</a>
+            <a class="nav-item-font" href="../../index.html#vlog">Vlog</a>
         </div>
     </nav>
     <nav class="nav-icon-bar">
@@ -58,7 +58,7 @@
     </nav>
     <div class="main-container">
         <header class="item1">
-            <div class="header-text">
+            <div class="header-text" id="title-displayed-in-home">
                 Sapiens - Lược sử về loài người
             </div>
             <div class="author header-view">
@@ -71,7 +71,7 @@
         <main class="item2">
             <div class="container">
                 <br>
-                <p>Khi còn đi học mình rất sợ môn lịch sử. Đối với mình lịch sử không gì khác hơn là một môn học thuộc lòng, tên những trận đánh, số người thương vong, số máy bay bị bắn hạ, rồi ngày tháng năm xảy ra các sự kiện, nói chung mọi thứ rối tung
+                <p id="content-displayed-in-home">Khi còn đi học mình rất sợ môn lịch sử. Đối với mình lịch sử không gì khác hơn là một môn học thuộc lòng, tên những trận đánh, số người thương vong, số máy bay bị bắn hạ, rồi ngày tháng năm xảy ra các sự kiện, nói chung mọi thứ rối tung
                     lên và mình thực sự đã học theo cách đối phó: học trước để quên sau. Tuy nhiên mình đã bị mê hoặc bởi một cuốn sách sử: Sapiens “lược sử loài người” và đã học được rất rất nhiều từ cuốn sách này, nhiều bài học trong đó khiến mình hết
                     sức bất ngờ vì đã đúc rút từ một cuốn sách sử.</p>
                 <br>
