--- a/long_review/202104002_suoi-nguon/content.html
+++ b/long_review/202104002_suoi-nguon/content.html
@@ -36,16 +36,16 @@
     </div>
     <nav class="navbar">
         <div class="nav-item-font nav-item">
-            <a class="nav-item-font" href="../../home.html">Home</a>
+            <a class="nav-item-font" href="../../index.html#">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../short-review.html">Short review</a>
+            <a class="nav-item-font" href="../../index.html#short-review">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../long-review.html">Long review</a>
+            <a class="nav-item-font" href="../../index.html#long-review">Long review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
-            <a class="nav-item-font" href="../../vlog.html">Vlog</a>
+            <a class="nav-item-font" href="../../index.html#vlog">Vlog</a>
         </div>
     </nav>
     <nav class="nav-icon-bar">
@@ -58,7 +58,7 @@
     </nav>
     <div class="main-container">
         <header class="item1">
-            <div class="header-text">
+            <div class="header-text" id="title-displayed-in-home">
                 Suối nguồn
             </div>
             <div class="author header-view">
@@ -73,7 +73,7 @@
                 <br>
                 <h4>SUỐI NGUỒN có gì hay?</h4>
                 <br>
-                <p>Mình đọc Suối nguồn cách đây mười mấy năm, khi mới hơn 20 – có thể coi là tuổi chập chững bước vào đời. Trước đó, mình lớn lên với văn học cổ điển. Những tác phẩm như Không Gia Đình, Hoàng Tử Bé, David Coperfield, Những tấm lòng cao cả
+                <p id="content-displayed-in-home">Mình đọc Suối nguồn cách đây mười mấy năm, khi mới hơn 20 – có thể coi là tuổi chập chững bước vào đời. Trước đó, mình lớn lên với văn học cổ điển. Những tác phẩm như Không Gia Đình, Hoàng Tử Bé, David Coperfield, Những tấm lòng cao cả
                     dạy cho mình rất nhiều điều về tình người, lòng nhân hậu, lòng tự tôn.
                 </p>
                 <p><span class="important-content">Suối nguồn rất khác với những tác phẩm cổ điển ấy, nó rọi thẳng vào mình một thứ ánh sáng chói chang và khác hẳn.</span> Nói không ngoa, Suối Nguồn là cuốn sách thay đổi hoàn toàn thế giới quan của mình.
