--- a/long_review/202104003_maye-musk/content.html
+++ b/long_review/202104003_maye-musk/content.html
@@ -36,16 +36,16 @@
     </div>
     <nav class="navbar">
         <div class="nav-item-font nav-item">
-            <a class="nav-item-font" href="../../home.html">Home</a>
+            <a class="nav-item-font" href="../../index.html#">Home</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../short-review.html">Short review</a>
+            <a class="nav-item-font" href="../../index.html#short-review">Short review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font">
-            <a class="nav-item-font" href="../../long-review.html">Long review</a>
+            <a class="nav-item-font" href="../../index.html#long-review">Long review</a>
         </div>
         <div class="nav-item-font nav-item nav-item-font" id="nav-item-last">
-            <a class="nav-item-font" href="../../vlog.html">Vlog</a>
+            <a class="nav-item-font" href="../../index.html#vlog">Vlog</a>
         </div>
     </nav>
     <nav class="nav-icon-bar">
@@ -58,7 +58,7 @@
     </nav>
     <div class="main-container">
         <header class="item1">
-            <div class="header-text">
+            <div class="header-text" id="title-displayed-in-home">
                 Sống mạo hiểm một cách cẩn thận
             </div>
             <div class="author header-view">
@@ -71,11 +71,13 @@
         <main class="item2">
             <div class="container">
                 <br>
+                <div id="content-displayed-in-home">
                 <h4>Nếu bạn thấy cái tên Maye Musk quen quen thì đó là vì bà chính là mẹ của người quen chung của chúng ta: Elon Musk.</h4>
                 <br>
                 <p>Nhưng cuốn sách này không phải được viết ra dưới định danh “mẹ của Elon” mà là <span class="important-content">Maye Musk – một bác sĩ dinh dưỡng, một người mẫu, một người phụ nữ.</span> Bà chính là hiện thân của “age gracefully” – già
                     đi một cách duyên dáng, ở tuổi 70 bà không ngồi một chỗ mà than vãn về tuổi già của mình, thay vì đó bà tận hưởng “tuổi già” của mình. Maye là nguồn cảm hứng bất tận cho phụ nữ ở bất cử độ tuổi nào – luôn học hỏi, vươn lên, dám sống,
                     dám thử, dám thay đổi, dám thất bại.</p>
+                </div>
 
                 <p>Nhìn người phụ tràn đầy năng lượng này bạn có tin bà đã trải qua cuộc đời cực kì khắc nghiệt, cơ cực. Ly hôn người chồng vũ phu và làm mẹ đơn thân ở tuổi 31, Maye đã từng phải làm tới 5 công việc một lúc để đảm bảo 3 mẹ con có một mái
                     nhà và có đủ thức ăn. Các con ngủ chung một phòng còn bà phải ngủ ở phòng khách. Không có tiền mua quần áo, thậm chí có lần vì thất lạc hành lý, bà đã phải mặc quần áo của Elon suốt nhiều tháng trời. Nếu bạn muốn biết Elon Musk ăn
